IngressAndRestrictionPod/Ingress/ingress4/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: multi-hosts-ingress
spec:
  rules:
    - host: app1.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sv1
                port:
                  number: 80
    - host: app2.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sv2
                port:
                  number: 80

# Access:
# Add entries to your /etc/hosts file:
# 127.0.0.1 app1.example.com
# 127.0.0.1 app2.example.com



# nslookup app1.example.com
# nslookup app2.example.com
# ping -c 3 app1.example.com
# ping -c 3 app2.example.com



# minikube ssh
# curl http://app1.example.com
# curl http://app2.example.com
